[project]
name = "code-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "asyncio>=3.4.3",
    "pathlib>=1.0.1",
    "dataclasses>=0.8",
]
